<resources>
    <string name="app_name">ILoveCollege</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_regist">RegistActivity</string>
    <string name="regist_now">立即注册</string>
    <string name="please_input_phone_number">请输入手机号</string>
    <string name="set_password">设置密码</string>
    <string name="input_code">输入验证码</string>
    <string name="get_code">获取验证码</string>
    <string name="back_to_login">返回登陆</string>
    <string name="title_activity_slide_menu_test">SlideMenuTestActivity</string>
    <string name="select_gender">选择性别</string>
    <string name="login_activity">LoginActivity</string>
    <string name="text_login1">欢迎登录</string>
    <string name="username">账号</string>
    <string name="password">密码</string>
    <string name="register_now">立即注册</string>
    <string name="please_input_username">请输入用户名</string>
    <string name="please_input_password">请输入密码</string>
    <string name="register_rightnow">立即注册</string>
    <string name="forget_password">忘记密码</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="wddp">我的地盘</string>
    <string name="hly">欢乐园</string>
    <string name="xyt">校园通</string>
    <string name="person_message">个人信息</string>
    <string name="my_college">我的大学</string>
    <string name="call_menu">联系我们</string>
    <string name="settings">设置</string>
    <string name="text">文字</string>
    <string name="voice">语音</string>
    <string name="hly_task">任务榜</string>
    <string name="hly_homework">作业帮</string>
    <string name="hly_job">求职</string>
    <string name="hly_poineering">创业</string>
    <string name="hly_second_hand">二手交易</string>
    <string name="hly_resources_sharing">资源共享</string>
    <string name="xyt_campus_public">校园公众号</string>
    <string name="xyt_schedule">西美课表</string>
    <string name="xyt_alumnus">校友记</string>
    <string name="zero">0</string>
    <string name="publish_text_cancel">取消</string>
    <string name="publish_text_image">图文</string>
    <string name="publish_send">发送</string>
    <string name="publish_limits">权限</string>
    <string name="publish_quality">照片质量</string>
</resources>

