<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:overScrollMode="never"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            xmlns:myView="http://schemas.android.com/apk/res-auto"
            android:layout_width="fill_parent"
            android:layout_height="160dp"
            android:orientation="horizontal">
            <com.unique.daiyiming.ilovecollege.View.ScaleTextView
                myView:textScale="0.95"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/hly_task"
                android:text="@string/hly_task"
                android:paddingLeft="20dp"
                android:paddingTop="120dp"
                android:textColor="#ffffff"/>
            <com.unique.daiyiming.ilovecollege.View.ScaleTextView
                myView:textScale="0.95"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/hly_homework"
                android:text="@string/hly_homework"
                android:paddingLeft="20dp"
                android:paddingTop="120dp"
                android:textColor="#ffffff"/>
            </LinearLayout>
        <LinearLayout
            xmlns:myView="http://schemas.android.com/apk/res-auto"
            android:layout_width="fill_parent"
            android:layout_height="160dp"
            android:orientation="horizontal">
            <com.unique.daiyiming.ilovecollege.View.ScaleTextView
                myView:textScale="0.95"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/hly_second_hand"
                android:text="@string/hly_second_hand"
                android:paddingLeft="20dp"
                android:paddingTop="120dp"
                android:textColor="#ffffff"/>
            <com.unique.daiyiming.ilovecollege.View.ScaleTextView
                myView:textScale="0.95"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/hly_resources_sharing"
                android:text="@string/hly_resources_sharing"
                android:paddingLeft="20dp"
                android:paddingTop="120dp"
                android:textColor="#ffffff"/>
        </LinearLayout>
        <LinearLayout
            xmlns:myView="http://schemas.android.com/apk/res-auto"
            android:layout_width="fill_parent"
            android:layout_height="160dp"
            android:orientation="horizontal">
            <com.unique.daiyiming.ilovecollege.View.ScaleTextView
                myView:textScale="0.95"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/hly_job"
                android:text="@string/hly_job"
                android:paddingLeft="20dp"
                android:paddingTop="120dp"
                android:textColor="#ffffff"/>
            <com.unique.daiyiming.ilovecollege.View.ScaleTextView
                myView:textScale="0.95"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/hly_poineering"
                android:text="@string/hly_poineering"
                android:paddingLeft="20dp"
                android:paddingTop="120dp"
                android:textColor="#ffffff"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>