<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#bfbfbf">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/action_bar">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="15dp"
        android:textColor="#ffffff"
        android:text="@string/publish_text_cancel"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:text="@string/publish_text_image"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="40dp"
        android:textColor="#ffffff"
        android:text="@string/publish_send"/>
    <TextView
        android:id="@+id/image_number"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="15dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="15dp"
        android:background="@drawable/publish_text_num_back"
        android:text="@string/zero"
        android:textColor="#ffffff"
        android:gravity="center"/>
        </RelativeLayout>
    <EditText
        android:background="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:singleLine="false"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="#dddddd"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/publish_text_expression"/>
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/publish_test_at"/>
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/publish_text_location"/>
        </RelativeLayout>
    <GridView
        android:id="@+id/noScrollgridview"
        android:background="#ffffff"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:numColumns="9">
    </GridView>
    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="30dp"
    android:background="#dddddd"
    android:layout_marginRight="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="8dp">
    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/publish_text_limits"
        android:layout_marginLeft="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/publish_limits"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="7dp"/>
    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="5dp"
        android:src="@drawable/publish_text_enter"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="#dddddd"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="2dp">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/publish_text_quality"
            android:layout_marginLeft="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/publish_quality"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="7dp"/>
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/publish_text_enter"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"/>
    </RelativeLayout>
</LinearLayout>
