<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:myView="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:background="@drawable/login_background">
        <View
            android:id="@+id/statusBar"
            android:layout_width="match_parent"
            android:layout_height="0dp"/>
        <TextView
            android:id="@+id/text1Id"
            android:textSize="24sp"
            android:textColor="#fafafa"
            android:text="@string/text_login1"
            android:gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
        <RelativeLayout
            android:id="@+id/rl_userName"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/regist_login_edittext_background">
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="16dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/user_icon"/>
                <EditText
                    android:id="@+id/edt_userName"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textColorHint="#fafafa"
                    android:textColor="#fafafa"
                    android:textSize="20sp"
                    android:hint="@string/please_input_username"
                    android:paddingLeft="8dp"
                    android:paddingRight="16dp"
                    android:layout_gravity="center_vertical"
                    android:maxLength="11"
                    android:background="@null"/>
                </LinearLayout>
            </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rl_password"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/regist_login_edittext_background">
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="23dp"
                    android:layout_height="23dp"
                    android:layout_marginLeft="13dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/password_icon"/>
                <EditText
                    android:id="@+id/edt_password"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textColorHint="#fafafa"
                    android:textColor="#fafafa"
                    android:textSize="20sp"
                    android:hint="@string/please_input_password"
                    android:inputType="textPassword"
                    android:paddingLeft="8dp"
                    android:paddingRight="16dp"
                    android:layout_gravity="center_vertical"
                    android:maxLength="20"
                    android:background="@null"/>
            </LinearLayout>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btn_registNow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:text="@string/register_rightnow"
                android:background="@null"
                android:textColor="#fafafa"
                android:textSize="20dp"/>
            <Button
                android:id="@+id/btn_forgetPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="40dp"
                android:background="@null"
                android:text="@string/forget_password"
                android:textColor="#fafafa"
                android:textSize="20dp"/>
            </RelativeLayout>
        <com.unique.daiyiming.ilovecollege.View.ScaleImageView
            android:id="@+id/simg_login"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="32dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/login_button"/>
    </LinearLayout>

    <com.unique.daiyiming.ilovecollege.View.WaitProgress
        android:id="@+id/wp_waitView"
        myView:dotRadius="6dp"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:background="#90333333">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="正在登录"
            android:layout_marginTop="200dp"
            android:layout_centerHorizontal="true"
            android:textColor="#fafafa"/>
    </com.unique.daiyiming.ilovecollege.View.WaitProgress>

</RelativeLayout>