<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:myView="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/regist_backgournd"
    tools:context=".RegistActivity">

    <LinearLayout
        android:id="@+id/ll_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:id="@+id/statusBar"
            android:layout_width="match_parent"
            android:layout_height="0dp"/>

        <TextView
            android:textSize="24sp"
            android:textColor="#fafafa"
            android:text="@string/regist_now"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RelativeLayout
            android:id="@+id/rl_phoneNumberContainer"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/regist_login_edittext_background">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="16dp"
                    android:contentDescription="@null"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/icon_phone_number"/>
                <EditText
                    android:id="@+id/edt_phoneNumber"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:textColorHint="#fafafa"
                    android:textColor="#fafafa"
                    android:textSize="20sp"
                    android:hint="@string/please_input_phone_number"
                    android:paddingLeft="8dp"
                    android:paddingRight="16dp"
                    android:layout_gravity="center_vertical"
                    android:maxLength="11"
                    android:background="@null"/>
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_passwordContainer"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/regist_login_edittext_background">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="16dp"
                    android:contentDescription="@null"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/icon_password"/>
                <EditText
                    android:id="@+id/edt_password"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColorHint="#fafafa"
                    android:textColor="#fafafa"
                    android:textSize="20sp"
                    android:hint="@string/set_password"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="8dp"
                    android:paddingRight="16dp"
                    android:maxLength="20"
                    android:background="@null"/>
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/edt_code"
                android:layout_width="150dp"
                android:layout_height="68dp"
                android:inputType="number"
                android:textColorHint="#666666"
                android:layout_marginTop="8dp"
                android:textColor="#fafafa"
                android:textSize="20sp"
                android:hint="@string/input_code"
                android:gravity="top"
                android:paddingTop="10dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:maxLength="6"
                android:background="@drawable/code_edittext_background"/>
            <com.unique.daiyiming.ilovecollege.View.ScaleTextView
                android:id="@+id/stv_getCode"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="65dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="16dp"
                android:text="@string/get_code"
                android:textColor="#fafafa"
                android:textSize="20sp"
                android:gravity="top|center_horizontal"
                android:paddingTop="10dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/get_code"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_backToLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingRight="16dp"
            android:paddingLeft="16dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:contentDescription="@null"
                android:layout_gravity="center_vertical"
                android:src="@drawable/back_to_login"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#BBBBBB"
                android:text="@string/back_to_login"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="3dp"
                android:textSize="18sp"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_genderTitle"
        android:visibility="gone"
        android:textSize="24sp"
        android:textColor="#fafafa"
        android:text="@string/select_gender"
        android:layout_marginTop="32dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <com.unique.daiyiming.ilovecollege.View.ScaleChangeImageView
        android:id="@+id/scimg_woman"
        android:visibility="gone"
        myView:fromImage="@drawable/woman"
        myView:toImage="@drawable/woman_pressed"
        android:layout_below="@id/ll_form"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        android:layout_centerHorizontal="true" />

    <com.unique.daiyiming.ilovecollege.View.ScaleChangeImageView
        android:id="@+id/scimg_man"
        android:visibility="gone"
        myView:fromImage="@drawable/man"
        myView:toImage="@drawable/man_pressed"
        android:layout_below="@id/ll_form"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        android:layout_centerHorizontal="true" />

    <com.unique.daiyiming.ilovecollege.View.ScaleImageView
        android:id="@+id/simg_go"
        android:layout_below="@id/ll_form"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/go"/>

    <com.unique.daiyiming.ilovecollege.View.WaitProgress
        android:id="@+id/wp_waitView"
        myView:dotRadius="6dp"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:background="#90333333">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="正在注册"
            android:layout_marginTop="200dp"
            android:layout_centerHorizontal="true"
            android:textColor="#fafafa"/>
    </com.unique.daiyiming.ilovecollege.View.WaitProgress>

</RelativeLayout>
