<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:id="@+id/rl_xygzh"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@drawable/selector_xyt_item"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp">
            <RelativeLayout
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/xyt_img1"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="16dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/xyt_campus_public"/>
                <TextView
                    android:id="@+id/xyt_text1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/xyt_img1"
                    android:layout_marginLeft="10dp"
                    android:layout_centerVertical="true"
                    android:text="@string/xyt_campus_public"
                    android:textSize="20sp"/>
                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="35dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/xyt_enter"
                    android:layout_marginRight="16dp"/>
            </RelativeLayout>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rl_kb"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@drawable/selector_xyt_item"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp">
            <RelativeLayout
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/xyt_img2"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="16dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/xyt_schedule"/>
                <TextView
                    android:id="@+id/xyt_text2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/xyt_img2"
                    android:layout_marginLeft="10dp"
                    android:layout_centerVertical="true"
                    android:text="@string/xyt_schedule"
                    android:textSize="20sp"/>
                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="35dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/xyt_enter"
                    android:layout_marginRight="16dp"/>
            </RelativeLayout>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rl_xyj"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@drawable/selector_xyt_item"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp">
            <RelativeLayout
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/xyt_img3"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="16dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/xyt_alumnus"/>
                <TextView
                    android:id="@+id/xyt_text3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/xyt_img3"
                    android:layout_marginLeft="10dp"
                    android:layout_centerVertical="true"
                    android:text="@string/xyt_alumnus"
                    android:textSize="20sp"/>
                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="35dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/xyt_enter"
                    android:layout_marginRight="16dp"/>
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>